<resources>
  <string name="facebook_app_id" translatable="false">115995243709207</string>
  <string name="fb_login_protocol_scheme" translatable="false">fb115995243709207</string>
  <string name="app_name" translatable="false">AsthmApp</string>
  <string name="default_channel" translatable="false">Default Channel</string>
  <string name="home">Home</string>
  <string name="learn">Learn</string>
  <string name="notifications">Notifications</string>
  <string name="more">More</string>
  <string name="view_reports">View Reports</string>
  <string name="reports">Reports</string>
  <string name="blood_oxygen_level_is_too_low">Your blood oxygen level is too low!</string>
  <string name="_65">65</string>
  <string name="avg_pulse_in_the_last_week">Avg. pulse\nin the last week</string>
  <string name="avg_sp02_rate_in_the_last_week">Avg. Sp02 rate\nin the last week</string>
  <string name="avg_pef_rate_in_the_last_week">Avg. PEF rate in the last week</string>
  <string name="latest_smartwatch_with_sp02_monitoring">Latest smartwatch with Sp02 monitoring</string>
  <string name="latest_smartwatch_with_the_sp02_monitoring">Latest smartwatch with the Sp02 monitoring</string>
  <string name="puffs_count">Puffs count</string>
  <string name="last_4_weeks">Last 4 weeks</string>
  <string name="preventer_inhaler_with_percent">Preventer inhaler \n(%1$d%%)</string>
  <string name="reliever_inhaler_with_percent">Reliever inhaler \n(%1$d%%)</string>
  <string name="combination_inhaler_with_percent">Combination inhaler \n(%1$d%%)</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="plus_add_data">+Add data</string>
  <string name="learn_more">Learn more</string>
  <string name="shop">Shop</string>
  <string name="remove_all">Remove all</string>
  <string name="emergency">Emergency</string>
  <string name="article_read">%1$d min read</string>
  <string name="search_explanation">Search videos and articles</string>
  <string name="settings">Settings</string>
  <string name="my_account">My account</string>
  <string name="my_buddies">My Buddies</string>
  <string name="log_out">Log out</string>
  <string name="add_new">+ Add new</string>
  <string name="these_people_will_be_contacted_if_your_alert_mode_is_on">These people will be contacted if your alert mode is ON. <u>Learn more</u></string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="confirm_password">Confirm your password</string>
  <string name="forgot_password"><u>Forgot password?</u></string>
  <string name="or">OR</string>
  <string name="ok">OK</string>
  <string name="login">login</string>
  <string name="sign_up">Sign up</string>
  <string name="login_with_google">Sign in with Google</string>
  <string name="login_with_facebook">Sign in with Facebook</string>
  <string name="fields_can_not_be_empty">Fields can\'t be empty</string>
  <string name="forgot_password_success">Email with further instructions was sent to you! Please check!</string>
  <string name="forgot_password_empty_email">Enter a valid email and click \"Forgot Password\"!</string>
  <string name="already_have_an_account_sign_in"><![CDATA[Already have an account? <link>Sign In</link>]]></string>
  <string name="passwords_is_not_match">Passwords don\'t match</string>
  <string name="welcome">Welcome!</string>
  <string name="sign_in_with_your_email_address">Sign in with your email address.</string>
  <string name="use_your_phone_to_login">Use your phone to login.</string>
  <string name="enter_your_email">Enter your email</string>
  <string name="enter_your_phone_number">Enter your phone number</string>
  <string name="enter_verification_code">Enter verification code</string>
  <string name="enter_your_password">Enter your password</string>
  <string name="sign_in_with_google">Sign in with Google</string>
  <string name="sign_up_with_google">Sign up with Google</string>
  <string name="sign_up_with_facebook">Sign up with Facebook</string>
  <string name="sign_in_with_facebook">Sign in with Facebook</string>
  <string name="new_user_sign_up"><![CDATA[New User? <link>Sign Up</link>]]></string>
  <string name="version">Version %1$s</string>
  <string name="sign_up_with_your_email_address_to_create_a_new_account">Sign up with your email address to create a new account.</string>
  <string name="continue_word">Continue</string>
  <string name="how_it_works"><u>How it works?</u></string>
  <string name="xx" translatable="false">XX</string>
  <string name="xxx" translatable="false">XXX</string>
  <string name="blood_oxygen_level">Blood oxygen level (Sp02)</string>
  <string name="pulse">Pulse</string>
  <string name="incidents">Incidents</string>
  <string name="bpm">BPM</string>
  <string name="lpm">L/min</string>
  <string name="peak_expiratory_flow">Peak expiratory flow</string>
  <string name="puffs">Puffs</string>
  <string name="preventer_inhaler">Preventer inhaler</string>
  <string name="reliever_inhaler">Reliever inhaler</string>
  <string name="combination_inhaler">Combination inhaler</string>
  <string name="next_asthma_review">Next asthma review</string>
  <string name="reminder">Reminder</string>
  <string name="we_will_remind_you_48h_24h_and_6h_earlier">We\'ll remind you 48h, 24h and 6h earlier</string>
  <string name="submit">Submit</string>
  <string name="add_data">Add data</string>
  <string name="add">Add</string>
  <string name="expected_values"><u>Expected values</u></string>
  <string name="whats_incidence"><u>What\'s incidence</u></string>
  <string name="today">Today</string>
  <string name="share_full_report">Share full report</string>
  <string name="share">Share</string>
  <string name="avg_blood_oxygen_level_percent">Avg. blood oxygen level (Sp02): %1$d%%</string>
  <string name="avg_pulse_beats_in_min">Avg. pulse: %1$d BPM</string>
  <string name="avg_pef_in_min">Avg. PEF: %1$d L/min</string>
  <string name="total_attacks_number">Total attacks: %1$d</string>
  <string name="normal_for_your_condition">Normal for your condition</string>
  <string name="lower_than_your_average_learn_more">Lower then your average. <u>Learn more</u></string>
  <string name="daily">Daily</string>
  <string name="weekly">Weekly</string>
  <string name="monthly">Monthly</string>
  <string name="alert_mode">Alert Mode</string>
  <string name="exit">Exit</string>
  <string name="sending_sms_to_buddies">Sending SMS to Buddies</string>
  <string name="awaiting_calls_from_buddies_5_min">Awaiting calls from buddies 5 min</string>
  <string name="phone_was_not_picked_up_calling_emergency_services">Phone was not picked up, call emergency services ⬇️</string>
  <string name="call_emergency">Call Emergency</string>
  <string name="stop_alert_mode">Stop alert mode</string>
  <string name="delete_buddy">Delete buddy</string>
  <string name="delete_buddy_explanation">Do you really want to delete %1$s?</string>
  <string name="new_records">New Records</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="terms_and_conditions">Terms and Conditions</string>
  <string name="my_subscriptions">My Subscriptions</string>
  <string name="delete_account">Delete account</string>
  <string name="verify_email">Verify Email</string>
  <string name="please_check_your_email_inbox">Please check your email inbox</string>
  <string name="do_you_want_to_log_out">Do you want to log out from the AsthmApp?</string>
  <string name="stay_logged_in">Stay logged in</string>
  <string name="verify_phone">Verify phone</string>
  <string name="verify">Verify</string>
  <string name="please_enter_the_verification_code">Please enter the verification code \n we sent to your mobile **%1$s</string>
  <string name="did_not_receive_the_code">Didn\'t receive a code?</string>
  <string name="resend"><u>Resend</u></string>
  <string name="phone_number_should_not_be_empty">Phone number shouldn\'t be empty</string>
  <string name="please_choose_your_role">Please, choose your role.</string>
  <string name="main_user">Main User</string>
  <string name="buddy">Buddy</string>
  <string name="cancel_emergency">Cancel Emergency</string>
  <string name="emergency_question">Do you really want to cancel emergency? If so, please type %s in the field below, and press \"Cancel\".</string>
  <string name="back">Back</string>
  <string name="code_does_not_match">Code doesn\'t match</string>
  <string name="buddy_request">Buddy request</string>
  <string name="buddy_request_explanation">%1$s has chosen you to be a Buddy. Do you accept?</string>
  <string name="accept">Accept</string>
  <string name="reject">Reject</string>
  <string name="welcome_to_asthmapp">Welcome to AsthmApp</string>
  <string name="we_intend_to_work_with_you_to_manage_and_monitor_your_asthma">We intend to work with you to manage and monitor your Asthma.</string>
  <string name="basic_information">Basic Information</string>
  <string name="name">Name</string>
  <string name="height">Height</string>
  <string name="metric">Metric</string>
  <string name="gender">Gender</string>
  <string name="male">Male</string>
  <string name="female">Female</string>
  <string name="unspecified">Unspecified</string>
  <string name="birth_date">Birth Date</string>
  <string name="imperial">Imperial</string>
  <string name="ft">ft</string>
  <string name="in">in</string>
  <string name="some_fields_are_empty_or_wrong">Some field are empty or wrong</string>
  <string name="cm">cm</string>
  <string name="home_page">Home Page</string>
  <string name="home_page_onboarding_description">Summary of your latest health data is here. \nChange your daily / weekly view under settings</string>
  <string name="learn_onboarding_description">Useful videos and articles are here. You can also try our quiz on the website to see what you know about asthma.</string>
  <string name="buddy_onboarding_description">The App will automatically call your Buddies if you activate the emergency mode. Your buddies should be people that will be available to help you in a crisis situation, not just your best friend! Try and set up 2 or 3 people you trust as Buddies. You can decide whether to give all or none of them access to your health data. Your buddies will get a link to download the Buddy app once you register them as your Buddy. Buddy app is free – they will never be asked to pay anything.</string>
  <string name="report_onboarding_description">Check your health stats over time under reports. You can also export this data to yourself or your health professional if you wish.</string>
  <string name="report">Report</string>
  <string name="notification">Notification</string>
  <string name="notification_onboarding_description">We will send you reminders if you forget to check your SpO2 levels regularly enough. We will also send tips we think are useful</string>
  <string name="recording_your_data">Recording your data</string>
  <string name="recording_your_data_onboarding_description">You need an Oximeter to record your SpO2 levels and your pulse. See our website <u>www.asthmapp.com</u> to get an oximeter if you don’t have one.</string>
  <string name="let_is_get_you_started">Let\'s Get You Started</string>
  <string name="skip">Skip</string>
  <string name="emergency_user">Emergency - %1$s</string>
  <string name="get_directions">Get directions</string>
  <string name="user_is_here">%1$s is here</string>
  <string name="asthmapp_report">My asthma report</string>
  <string name="send_email">Send email…</string>
  <string name="get_started_and_enjoy_a_30_day_free_trial">Get started and enjoy a 30 day free trial</string>
  <string name="standard">Standard</string>
  <string name="missing_buddy_location">Missing buddy location</string>
  <string name="missing_buddy_location_explanation">Buddy didn’t share the location of emergency, please, call to get more details.</string>
  <string name="no_buddies">You Do Not Have Any Buddies</string>
  <string name="percent" translatable="false">%</string>
</resources>