<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

  <ImageView
      android:id="@+id/ivLogo"
      android:layout_width="72dp"
      android:layout_height="72dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="64dp"
      android:layout_marginEnd="24dp"
      android:contentDescription="@string/app_name"
      android:src="@drawable/ic_logo"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/tvTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="24dp"
      android:text="@string/welcome"
      android:textColor="@color/ebonyClay"
      android:textSize="30sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/ivLogo" />

  <TextView
      android:id="@+id/tvSubtitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:text="@string/use_your_phone_to_login"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvTitle" />

  <com.asthmapp.android.components.InputField
      android:id="@+id/ifPhone"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="36dp"
      android:layout_marginEnd="24dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />

  <com.asthmapp.android.features.components.ButtonWithChevron
      android:id="@+id/btnContinue"
      android:layout_width="match_parent"
      android:layout_height="64dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="24dp"
      android:text="@string/login"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/ifPhone" />

  <include
      android:id="@+id/spinner"
      layout="@layout/spinner_with_cap"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
